--- a/public/assets/styles.css
+++ b/public/assets/styles.css
@@ -325,14 +325,15 @@ body {
   padding-top: 8px;
   padding-bottom: 8px;
   padding-left: 30px;
-  padding-right: 30px;
+  padding-right: 10px;
   font-weight: 400;
-  margin-right: 1.75rem;
+  margin-right: 0.50rem;
 }
 .searchContainer:focus-within {
   box-shadow: 0px 0px 8px #1f1f1f;
 }
 #search {
+  width: 90%;
   border: none;
   background: transparent;
   color: var(--white);
@@ -342,6 +343,12 @@ body {
 }
 .movies {
   margin-top: 20px;
+  padding-left: 0px;
+  padding-right: 0px;
+  margin-left: 0px;
+  margin-right: 0px;
+  width: 90%;
+  margin: auto;
 }
 #search-ul {
   padding: 0;
@@ -682,11 +689,13 @@ body {
 /* Responsive */
 /* Mobile */
 @media only screen and (max-width: 768px) {
+  #btn-container {
+    justify-content: center;
+  }
   .searchContainer {
-    float: right;
+    margin: 0 auto;
+    text-align: center;
     margin-top: 15px;
-    padding-left: 10px;
-    padding-right: 10px;
   }
   .footerContainer {
     margin-top: 0px;
@@ -702,9 +711,6 @@ body {
   }
   .profile-menu {
     margin-top: -5px;
-  }
-  .filterDiv {
-    margin: 0.8rem;
   }
   .item-poster {
     width: 100%;
