--- a/components/SearchBar/searchbar.module.css
+++ b/components/SearchBar/searchbar.module.css
@@ -1,3 +1,13 @@
 .mobileSearchBar {
   width: calc(100% - 2rem);
 }
+
+.searchResultsContainer {
+  width: calc(100% - 2rem);
+}
+
+@media (min-width: 1024px) {
+  .searchResultsContainer {
+    width: 16rem;
+  }
+}
