--- a/pages/index.css
+++ b/pages/index.css
@@ -73,3 +73,10 @@ body {
 .vjs-menu-item-text::first-letter {
   text-transform: uppercase;
 }
+
+.vjs-text-track-display div {
+  font-size: 0.8em;
+  background-color: transparent!important;
+  text-shadow: 0 2px 6px rgba(0, 0, 0, 0.678);
+  font-weight: 600;
+}
