streaming for tv shows and subtitles with new api implementation

--- a/pages/title/[id]/id.module.css
+++ b/pages/title/[id]/id.module.css
@@ -6,3 +6,11 @@
 .starIcon path {
   fill-rule: unset;
 }
+
+.playEpisodeIcon {
+  transform: scale(3);
+}
+
+.iconContainer {
+  transform: translate(-7rem, 0);
+}
