--- a/pages/title/[id]/id.module.css
+++ b/pages/title/[id]/id.module.css
@@ -1,6 +1,16 @@
 .titleBackground {
   height: 100vh;
-  filter: blur(0.5rem);
+  animation:kenburns-top 2s ease-out both;
+}
+
+@keyframes kenburns-top{0%{transform:scale(1) translateY(0);transform-origin:50% 16%}100%{transform:scale(1.25) translateY(-15px);transform-origin:top}}
+
+.titleBackground::after {
+  content: "";
+  position: absolute;
+  inset: 0px;
+  opacity: 0;
+  transition: opacity 500ms ease 0s;
 }
 
 .starIcon path {
